--- a/www/index.html
+++ b/www/index.html
@@ -408,7 +408,7 @@
 	</script>
 
 	<!--adding async https://developers.google.com/web/fundamentals/performance/critical-rendering-path/adding-interactivity-with-javascript-->	
-	<script src="js/jquery.js" async></script>
+	<script src="js/jquery.js"></script>
 	<script src="js/jquery.scrolly.js" async></script>
 	<script src="js/skel.js" async></script>
 	<script src="js/util.js" async></script>
